Crash in C2: guarantee(n != NULL) failed: No Node

XMLWordPrintable

    • b35
    • x86_64
    • linux_ubuntu
    • Verified

        ADDITIONAL SYSTEM INFORMATION :
        OpenJDK 64-Bit Server VM (build 11.0.8+10-post-Ubuntu-0ubuntu118.04.1, mixed mode, sharing)
        OpenJDK 64-Bit Server VM Zulu11.41+23-CA (11.0.8+10-LTS, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)

        A DESCRIPTION OF THE PROBLEM :
        I've shared a folder containing a full repro, hs_err_pid.log, and replay_pid.log: https://drive.google.com/drive/folders/1wYmrNNqznr32jxV9ERr3P7-MTr_9K0Ac?usp=sharing

        Below is an excerpt from the hs_err_pid.log:

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (loopnode.hpp:769), pid=6178, tid=6189
        # guarantee(n != NULL) failed: No Node.
        #
        # JRE version: OpenJDK Runtime Environment (11.0.8+10) (build 11.0.8+10-post-Ubuntu-0ubuntu118.04.1)
        # Java VM: OpenJDK 64-Bit Server VM (11.0.8+10-post-Ubuntu-0ubuntu118.04.1, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /mnt/humio/erik/Projects/humio/repro-jitrex2/core.6178)
        #
        # If you would like to submit a bug report, please visit:
        # https://bugs.launchpad.net/ubuntu/+source/openjdk-lts
        #

        --------------- S U M M A R Y ------------

        Command Line: MainSmaller

        Host: Intel(R) Core(TM) i7-7600U CPU @ 2.80GHz, 4 cores, 31G, Ubuntu 18.04.4 LTS
        Time: Tue Sep 15 11:03:07 2020 CEST elapsed time: 0 seconds (0d 0h 0m 0s)

        --------------- T H R E A D ---------------

        Current thread (0x00007f5aa0229000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=6189, stack(0x00007f5a70889000,0x00007f5a7098a000)]


        Current CompileTask:
        C2: 304 219 4 com.humio.jitrex.jvm.R_tmp1::nextMatchInt (5066 bytes)

        Stack: [0x00007f5a70889000,0x00007f5a7098a000], sp=0x00007f5a709854e0, free space=1009k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xdf8919]
        V [libjvm.so+0xdf956f]
        V [libjvm.so+0x6515a6]
        V [libjvm.so+0x6f1f7e]
        V [libjvm.so+0xa7a0f6]
        V [libjvm.so+0x5f21ba]
        V [libjvm.so+0x5f33f2]
        V [libjvm.so+0x509910]
        V [libjvm.so+0x5fd6f3]
        V [libjvm.so+0x5fee98]
        V [libjvm.so+0xd8996f]
        V [libjvm.so+0xd860bf]
        V [libjvm.so+0xbd632e]

        REGRESSION : Last worked in version 11

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        1. Extract the file repro.tgz (can be downloaded from https://drive.google.com/drive/folders/1wYmrNNqznr32jxV9ERr3P7-MTr_9K0Ac?usp=sharing):

          tar zxf repro.tgz

        2. Run the script run.sh:
          
          sh run.sh

        3. Repeat step 2 until the JVM crashes.

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        The script completes without a JVM crash.
        ACTUAL -
        Occasionally, the JVM will crash.

        ---------- BEGIN SOURCE ----------
        See: https://drive.google.com/drive/folders/1wYmrNNqznr32jxV9ERr3P7-MTr_9K0Ac?usp=sharing
        The reproduction includes a class file that is generated by https://github.com/humio/jitrex. There's no source code corresponding to this (com/humio/jitrex/jvm/R_tmp1.class). The other sources are in the jitrex github repository.
        ---------- END SOURCE ----------

        CUSTOMER SUBMITTED WORKAROUND :
        Unknown.

        FREQUENCY : often


          1. hs_err_pid15032.log
            27 kB
          2. ilt_dump.txt
            82 kB
          3. JVM crash-20200916T104101Z-001.zip
            40 kB
          4. repro.tgz
            10 kB

              Assignee:
              Vladimir Kozlov
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              16 Start watching this issue

                Created:
                Updated:
                Resolved: