8253353: Crash in C2: guarantee(n != NULL) failed: No Node

Reviewed-by: vlivanov, neliasso