hotspot/src/share/vm/opto/loopnode.cpp
@@ -1196,6 +1196,7 @@ int IdealLoopTree::is_member( const IdealLoopTree *l ) const {
 //------------------------------set_nest---------------------------------------
 // Set loop tree nesting depth.  Accumulate _has_call bits.
 int IdealLoopTree::set_nest( uint depth ) {
+  assert(depth <= SHRT_MAX, "sanity");
   _nest = depth;
   int bits = _has_call;
   if( _child ) bits |= _child->set_nest(depth+1);
